<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/movie_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/background_image_height"
            android:cropToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/infinity_war_background" />

        <ImageView
            android:id="@+id/movie_main_image"
            android:layout_width="@dimen/main_image_width"
            android:layout_height="@dimen/main_image_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_background"
            android:scaleType="centerCrop"

            app:srcCompat="@drawable/infinity_war_main" />

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/infinity_war_title"
            android:textColor="@android:color/holo_purple"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/movie_main_image"
            app:layout_constraintTop_toTopOf="@+id/movie_main_image" />

        <TextView
            android:id="@+id/movie_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/released"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/movie_name"
            app:layout_constraintTop_toBottomOf="@+id/movie_name" />

        <TextView
            android:id="@+id/movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/infinity_war_release_date"
            app:layout_constraintStart_toEndOf="@+id/movie_release"
            app:layout_constraintTop_toTopOf="@+id/movie_release" />

        <Button
            android:id="@+id/bt_movie_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/movie_trailer"
            app:layout_constraintStart_toEndOf="@+id/movie_main_image"
            app:layout_constraintTop_toBottomOf="@+id/movie_release"
            android:onClick="open_trailer"/>

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/overview"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_main_image" />

        <TextView
            android:id="@+id/movie_overview_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/infinity_war_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_overview" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>